// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar snapshots orientation left [default] 1`] = `
<div
  class="flex antialiased flex-row items-center gap-3"
>
  <div
    class="order-1 inline-flex flex-row items-center relative border border-gray-400 bg-gray-100 rounded-full h-12 w-12 order-1"
  >
    <img
      alt="Avatar"
      class="rounded-full"
      height="46"
      src="https://avatars.githubusercontent.com/u/56262247"
      width="46"
    />
  </div>
  <div
    class="order-2"
  >
    Vishal
  </div>
</div>
`;

exports[`Avatar snapshots orientation right 1`] = `
<div
  class="flex antialiased flex-row items-center gap-3"
>
  <div
    class="order-3 inline-flex flex-row items-center relative border border-gray-400 bg-gray-100 rounded-full h-12 w-12 order-3"
  >
    <img
      alt="Avatar"
      class="rounded-full"
      height="46"
      src="https://avatars.githubusercontent.com/u/56262247"
      width="46"
    />
  </div>
  <div
    class="order-2"
  >
    Vishal
  </div>
</div>
`;

exports[`Avatar snapshots orientation top 1`] = `
<div
  class="flex antialiased flex-col gap-3"
>
  <div
    class="order-1 inline-flex flex-row items-center relative border border-gray-400 bg-gray-100 rounded-full h-12 w-12 order-1"
  >
    <img
      alt="Avatar"
      class="rounded-full"
      height="46"
      src="https://avatars.githubusercontent.com/u/56262247"
      width="46"
    />
  </div>
  <div
    class="order-2"
  >
    Vishal
  </div>
</div>
`;

exports[`Avatar snapshots size lg 1`] = `
<div
  class="flex antialiased flex-row items-center gap-4"
>
  <div
    class="order-1 inline-flex flex-row items-center relative border border-gray-400 bg-gray-100 rounded-full h-18 w-18 order-1"
  >
    <img
      alt="Avatar"
      class="rounded-full"
      height="70"
      src="https://avatars.githubusercontent.com/u/56262247"
      width="70"
    />
  </div>
  <div
    class="order-2"
  >
    Vishal
  </div>
</div>
`;

exports[`Avatar snapshots size md [default] 1`] = `
<div
  class="flex antialiased flex-row items-center gap-3"
>
  <div
    class="order-1 inline-flex flex-row items-center relative border border-gray-400 bg-gray-100 rounded-full h-12 w-12 order-1"
  >
    <img
      alt="Avatar"
      class="rounded-full"
      height="46"
      src="https://avatars.githubusercontent.com/u/56262247"
      width="46"
    />
  </div>
  <div
    class="order-2"
  >
    Vishal
  </div>
</div>
`;

exports[`Avatar snapshots size sm 1`] = `
<div
  class="flex antialiased flex-row items-center gap-1"
>
  <div
    class="order-1 inline-flex flex-row items-center relative border border-gray-400 bg-gray-100 rounded-full h-8 w-8 order-1"
  >
    <img
      alt="Avatar"
      class="rounded-full"
      height="30"
      src="https://avatars.githubusercontent.com/u/56262247"
      width="30"
    />
  </div>
  <div
    class="order-2"
  >
    Vishal
  </div>
</div>
`;
